@@ -144,15 +144,15 @@ CREATE TABLE IF NOT EXISTS `tagente_modulo` (
   `id_agente_modulo` int(10) unsigned NOT NULL auto_increment,
   `id_agente` int(10) unsigned NOT NULL default '0',
   `id_tipo_modulo` smallint(5) NOT NULL default '0',
-  `descripcion` varchar(100) NOT NULL default '',
+  `descripcion` TEXT NOT NULL default '',
   `nombre` varchar(100) NOT NULL default '',
   `id_policy_module` INTEGER unsigned NOT NULL default '0',
   `max` bigint(20) default '0',
   `min` bigint(20) default '0',
   `module_interval` int(4) unsigned default '0',
   `tcp_port` int(4) unsigned default '0',
-  `tcp_send` varchar(255) default '',
-  `tcp_rcv` varchar(255) default '',
+  `tcp_send` TEXT default '',
+  `tcp_rcv` TEXT default '',
   `snmp_community` varchar(100) default '',
   `snmp_oid` varchar(255) default '0',
   `ip_target` varchar(100) default '',
