@@ -1,3 +1,9 @@
+2010-10-20  Sancho Lerena <slerena@artica.es>
+
+	* pandoradb.sql
+	extras/pandoradb_migrate_v3.1_to_v3.2.sql: TEXT type for some fields
+	with small length now with the HTML encoding.
+
 2010-10-20  Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* godmode/servers/modificar_server.php: Disable change name of server
